# task-cli

./: pyproject.toml
task_cli/: task.py
task_cli/utils/: tools.py
tests/: test_task_cli.py
