[tool.poetry]
name = "task-cli"
version = "0.1.0"
description = "This project aims to develop a CLI to register and notify tasks."
authors = ["Rodrigo Santos <rorvts@gmail.com>", "Paullo Sergyo <soaoba007@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"